@@ -1,8 +1,8 @@
 /****************************************************************************
  *
  * $Source: /usr/local/cvsroot/gccsdk/unixlib/source/clib/stdint.h,v $
- * $Date: 2002/07/26 12:28:06 $
- * $Revision: 1.2.2.3 $
+ * $Date: 2002/08/18 21:22:10 $
+ * $Revision: 1.2.2.4 $
  * $State: Exp $
  * $Author: admin $
  *
@@ -20,7 +20,7 @@
 typedef signed char int8_t;
 typedef short int int16_t;
 typedef int int32_t;
-#ifdef __CC_NORCROFT
+#if defined(__CC_NORCROFT) && (__CC_NORCROFT_VERSION < 550)
 typedef __int64 int64_t;
 #else
 __extension__
@@ -31,7 +31,7 @@ typedef long long int int64_t;
 typedef unsigned char uint8_t;
 typedef unsigned short int uint16_t;
 typedef unsigned int uint32_t;
-#ifdef __CC_NORCROFT
+#if defined(__CC_NORCROFT) && (__CC_NORCROFT_VERSION < 550)
 typedef unsigned __int64 uint64_t;
 #else
 __extension__
@@ -46,7 +46,7 @@ typedef unsigned long long int uint64_t;
 typedef signed char int_least8_t;
 typedef short int int_least16_t;
 typedef int int_least32_t;
-#ifdef __CC_NORCROFT
+#if defined(__CC_NORCROFT) && (__CC_NORCROFT_VERSION < 550)
 typedef __int64 int_least64_t;
 #else
 __extension__
@@ -57,7 +57,7 @@ typedef long long int int_least64_t;
 typedef unsigned char uint_least8_t;
 typedef unsigned short int uint_least16_t;
 typedef unsigned int uint_least32_t;
-#ifdef __CC_NORCROFT
+#if defined(__CC_NORCROFT) && (__CC_NORCROFT_VERSION < 550)
 typedef unsigned __int64 uint_least64_t;
 #else
 __extension__
@@ -71,7 +71,7 @@ typedef unsigned long long int uint_least64_t;
 typedef signed char int_fast8_t;
 typedef int int_fast16_t;
 typedef int int_fast32_t;
-#ifdef __CC_NORCROFT
+#if defined(__CC_NORCROFT) && (__CC_NORCROFT_VERSION < 550)
 typedef __int64 int_fast64_t;
 #else
 __extension__
@@ -82,7 +82,7 @@ typedef long long int int_fast64_t;
 typedef unsigned char uint_fast8_t;
 typedef unsigned int uint_fast16_t;
 typedef unsigned int uint_fast32_t;
-#ifdef __CC_NORCROFT
+#if defined(__CC_NORCROFT) && (__CC_NORCROFT_VERSION < 550)
 typedef unsigned __int64 uint_fast64_t;
 #else
 __extension__
@@ -104,7 +104,7 @@ __extension__
 typedef long long int intmax_t;
 __extension__
 typedef unsigned long long int uintmax_t;
-#elif defined __CC_NORCROFT
+#elif defined(__CC_NORCROFT) && (__CC_NORCROFT_VERSION < 550)
 typedef __int64 intmax_t;
 typedef unsigned __int64 uintmax_t;
 #else
